@@ -501,7 +501,9 @@ pp_base_format (pretty_printer *pp, text_info *text)
 	      {
 		tree ao = BLOCK_ABSTRACT_ORIGIN (block);
 
-		while (TREE_CODE (ao) == BLOCK && BLOCK_ABSTRACT_ORIGIN (ao))
+		while (TREE_CODE (ao) == BLOCK
+		       && BLOCK_ABSTRACT_ORIGIN (ao)
+		       && BLOCK_ABSTRACT_ORIGIN (ao) != ao)
 		  ao = BLOCK_ABSTRACT_ORIGIN (ao);
 
 		if (TREE_CODE (ao) == FUNCTION_DECL)
