@@ -1,3 +1,8 @@
+2008-08-19  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/37156
+	* gcc.dg/pr37156.c: New test.
+
 2008-08-18  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
 	* gcc.c-torture/execute/ieee/inf-2.c (testf): Skip on the SPU.
